--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.thymeleaf.cache=false
+
 spring.datasource.url=${env.MYSQL_URI}
 spring.datasource.username=${env.MYSQL_USERNAME}
 spring.datasource.password=${env.MYSQL_PASSWORD}
