--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.thymeleaf.cache=false
 
+spring.mvc.static-path-pattern=/report/**
+
 spring.datasource.url=${env.MYSQL_URI}
 spring.datasource.username=${env.MYSQL_USERNAME}
 spring.datasource.password=${env.MYSQL_PASSWORD}
