--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.thymeleaf.cache=false
 
-spring.mvc.static-path-pattern=/report/**
+spring.mvc.static-path-pattern=${env.REPORT}
 
 spring.datasource.url=${env.MYSQL_URI}
 spring.datasource.username=${env.MYSQL_USERNAME}
