Addition of Menu and UI changes. Improvement of Auth UI.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.auth=${env.MAIL_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${env.MAIL_ENABLE}
 spring.mail.properties.mail.smtp.ssl.trust=${env.MAIL_SSL_TRUST}
 spring.mail.properties.mail.debug=${env.MAIL_DEBUG}
+
+spring.thymeleaf.cache=false
