--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.mvc.static-path-pattern=${env.REPORT}
+#spring.mvc.static-path-pattern=${env.REPORT}
 
 spring.datasource.url=${env.MYSQL_URI}
 spring.datasource.username=${env.MYSQL_USERNAME}
